updated some imgs

--- a/views/team.hbs
+++ b/views/team.hbs
@@ -124,10 +124,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-women">
             <div class="portfolio-wrap">
-              <img src="img/projects/responsive.png" class="img-fluid" alt="">
+              <img src="img/projects/form.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-links">
-                  <a href="img/projects/responsive.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="img/projects/form.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
